template/oidc-auth/base/auth-authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: auth-allow-in-cluster-redirect
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  rules:
  - to:
    - operation:
        hosts:
        - "<< domain.auth >>.<< domain.root >>"
        - "<< domain.dashboard >>.<< domain.root >>" # needed for redirect after authentication
        - "<< domain.serving >>.<< domain.root >>" # needed for redirect after authentication
        - "*.<< domain.serving >>.<< domain.root >>" # needed for redirect after authentication
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: auth-allow-access
  namespace: auth
spec:
  action: ALLOW
  rules:
  - {}
  # - from:
  #   - source:
  #       namespaces:
  #       - auth
  #       - istio-system
